// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconFill props exists 1`] = `
<
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconFill should create Icon element. 1`] = `
<
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconFill should create fillGlyphMap 1`] = `
Object {
  "account-book": 57345,
  "alert": 57346,
  "alipay-circle": 57347,
  "alipay-square": 57348,
  "aliwangwang": 57349,
  "amazon-circle": 57350,
  "amazon-square": 57351,
  "android": 57352,
  "api": 57353,
  "apple": 57354,
  "appstore": 57355,
  "audio": 57356,
  "backward": 57357,
  "bank": 57358,
  "behance-circle": 57359,
  "behance-square": 57360,
  "bell": 57361,
  "book": 57362,
  "box-plot": 57363,
  "bug": 57364,
  "build": 57365,
  "bulb": 57366,
  "calculator": 57367,
  "calendar": 57368,
  "camera": 57369,
  "car": 57370,
  "caret-down": 57371,
  "caret-left": 57372,
  "caret-right": 57373,
  "caret-up": 57374,
  "carry-out": 57375,
  "check-circle": 57376,
  "check-square": 57377,
  "chrome": 57378,
  "ci-circle": 57379,
  "clock-circle": 57380,
  "close-circle": 57381,
  "close-square": 57382,
  "cloud": 57383,
  "code": 57386,
  "code-sandbox-circle": 57384,
  "code-sandbox-square": 57385,
  "codepen-circle": 57387,
  "codepen-square": 57388,
  "compass": 57389,
  "contacts": 57390,
  "container": 57391,
  "control": 57392,
  "copy": 57393,
  "copyright-circle": 57394,
  "credit-card": 57395,
  "crown": 57396,
  "customer-service": 57397,
  "dashboard": 57398,
  "database": 57399,
  "delete": 57400,
  "diff": 57401,
  "dingtalk-circle": 57402,
  "dingtalk-square": 57403,
  "dislike": 57404,
  "dollar-circle": 57405,
  "down-circle": 57406,
  "down-square": 57407,
  "dribbble-circle": 57408,
  "dribbble-square": 57409,
  "dropbox-circle": 57410,
  "dropbox-square": 57411,
  "edit": 57412,
  "environment": 57413,
  "euro-circle": 57414,
  "exclamation-circle": 57415,
  "experiment": 57416,
  "eye": 57418,
  "eye-invisible": 57417,
  "facebook": 57419,
  "fast-backward": 57420,
  "fast-forward": 57421,
  "file": 57433,
  "file-add": 57422,
  "file-excel": 57423,
  "file-exclamation": 57424,
  "file-image": 57425,
  "file-markdown": 57426,
  "file-pdf": 57427,
  "file-ppt": 57428,
  "file-text": 57429,
  "file-unknown": 57430,
  "file-word": 57431,
  "file-zip": 57432,
  "filter": 57434,
  "fire": 57435,
  "flag": 57436,
  "folder": 57439,
  "folder-add": 57437,
  "folder-open": 57438,
  "format-painter": 57440,
  "forward": 57441,
  "frown": 57442,
  "fund": 57443,
  "funnel-plot": 57444,
  "gift": 57445,
  "github": 57446,
  "gitlab": 57447,
  "gold": 57448,
  "golden": 57449,
  "google-circle": 57450,
  "google-plus-circle": 57451,
  "google-plus-square": 57452,
  "google-square": 57453,
  "hdd": 57454,
  "heart": 57455,
  "highlight": 57456,
  "home": 57457,
  "hourglass": 57458,
  "html5": 57459,
  "idcard": 57460,
  "ie-circle": 57461,
  "ie-square": 57462,
  "info-circle": 57463,
  "instagram": 57464,
  "insurance": 57465,
  "interaction": 57466,
  "layout": 57467,
  "left-circle": 57468,
  "left-square": 57469,
  "like": 57470,
  "linkedin": 57471,
  "lock": 57472,
  "mac-command": 57473,
  "mail": 57474,
  "medicine-box": 57475,
  "medium-circle": 57476,
  "medium-square": 57477,
  "meh": 57478,
  "message": 57479,
  "minus-circle": 57480,
  "minus-square": 57481,
  "mobile": 57482,
  "money-collect": 57483,
  "notification": 57484,
  "pause-circle": 57485,
  "pay-circle": 57486,
  "phone": 57487,
  "picture": 57488,
  "pie-chart": 57489,
  "play-circle": 57490,
  "play-square": 57491,
  "plus-circle": 57492,
  "plus-square": 57493,
  "pound-circle": 57494,
  "printer": 57495,
  "profile": 57496,
  "project": 57497,
  "property-safety": 57498,
  "pushpin": 57499,
  "qq-circle": 57500,
  "qq-square": 57501,
  "question-circle": 57502,
  "read": 57503,
  "reconciliation": 57504,
  "red-envelope": 57505,
  "reddit-circle": 57506,
  "reddit-square": 57507,
  "rest": 57508,
  "right-circle": 57509,
  "right-square": 57510,
  "robot": 57511,
  "rocket": 57512,
  "safety-certificate": 57513,
  "save": 57514,
  "schedule": 57515,
  "security-scan": 57516,
  "setting": 57517,
  "shop": 57518,
  "shopping": 57519,
  "signal": 57520,
  "sketch-circle": 57521,
  "sketch-square": 57522,
  "skin": 57523,
  "skype": 57524,
  "slack-circle": 57525,
  "slack-square": 57526,
  "sliders": 57527,
  "smile": 57528,
  "snippets": 57529,
  "sound": 57530,
  "star": 57531,
  "step-backward": 57532,
  "step-forward": 57533,
  "stop": 57534,
  "switcher": 57535,
  "tablet": 57536,
  "tag": 57537,
  "tags": 57538,
  "taobao-circle": 57539,
  "taobao-square": 57540,
  "thunderbolt": 57541,
  "tool": 57542,
  "trademark-circle": 57543,
  "trophy": 57544,
  "twitter-circle": 57545,
  "twitter-square": 57546,
  "unlock": 57547,
  "up-circle": 57548,
  "up-square": 57549,
  "usb": 57550,
  "video-camera": 57551,
  "wallet": 57552,
  "warning": 57553,
  "wechat": 57554,
  "weibo-circle": 57555,
  "weibo-square": 57556,
  "windows": 57557,
  "yahoo": 57558,
  "youtube": 57559,
  "yuque": 57560,
  "zhihu-circle": 57561,
  "zhihu-square": 57562,
}
`;
